feat(device) detect brand FNF models: iFive Mini 4S, iFive Air feat(device) detect brand Leotec model: Pulsar QI3G feat(device) detect brand Pantech models: IM-100S, IM-100K, IM-100GN feat(device) detect brand LG models: G3 Beat (LG-D723, LG-D725, LG-D725PR, LG-D726, LG-D728) feat(device) detect brand Walton models: Primo RM2 Mini, Primo R4 Plus, Primo ZX2 Mini,  Primo ZX2, Primo ZX2 Lite, Primo RH2, Primo GF4, Primo EF3, Primo NH Lite, Primo NX4 Mini,  Primo NX4, Primo NH2 fix(device) rename device LG model LG-D724: G3 Beat to G3s

--- a/Tests/fixtures/smartphone-8.yml
+++ b/Tests/fixtures/smartphone-8.yml
@@ -4116,7 +4116,7 @@
   device:
     type: smartphone
     brand: LG
-    model: G3 Beat
+    model: G3s
   os_family: Android
   browser_family: Chrome
 - 
