--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5998,6 +5998,24 @@ Evolveo:
     - regex: 'EVOLVEO[ _]([^;/]*) Build'
       model: '$1'
 
+# Leotec
+Leotec:
+  regex: '(LESPH501[14]|LESPH5003B|SUPERNOVA (?:Qi16|Qi32|i3G96[X]?)|PULSAR QI3G)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'LESPH5011'
+      model: 'Argon e250'
+    - regex: 'LESPH5003B'
+      model: 'Argon A250B'
+    - regex: 'LESPH5014'
+      model: 'Krypton K150'
+    - regex: 'SUPERNOVA (Qi16|Qi32|i3G96[X]?)'
+      device: 'tablet'
+      model: 'Supernova $1'
+    - regex: 'PULSAR (QI3G)'
+      device: 'tablet'
+      model: 'Pulsar $1'
+
 # Explay
 Explay:
   regex: 'Explay|[\w]+-EXPLAY-FIN|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-3]|RioPlay|Leader|Pulsar|Infinityll|Imperium[78]|Indigo|Lagoon|Tornado(?! 348)(?:3G)?'
@@ -9221,21 +9239,6 @@ LeEco:
     - regex: 'LeEco ([^;/]+) Build'
       model: '$1'
 
-# Leotec
-Leotec:
-  regex: 'LESPH501[14]|LESPH5003B|SUPERNOVA (Qi16|Qi32|i3G96[X]?)'
-  device: 'smartphone'
-  models:
-    - regex: 'LESPH5011'
-      model: 'Argon e250'
-    - regex: 'LESPH5003B'
-      model: 'Argon A250B'
-    - regex: 'LESPH5014'
-      model: 'Krypton K150'
-    - regex: 'SUPERNOVA (Qi16|Qi32|i3G96[X]?)'
-      device: 'tablet'
-      model: 'Supernova $1'
-
 # Lephone
 Lephone:
   regex: 'lephone[ _]|lephoneP1'
@@ -9677,8 +9680,10 @@ LG:
       model: 'G2 Mini'
     - regex: 'LG-D85[01258]|VS985|LGLS990'
       model: 'G3'
-    - regex: 'LG-D72[2458]'
+    - regex: 'LG-D72[23568]'
       model: 'G3 Beat'
+    - regex: 'LG-D724'
+      model: 'G3s'
     - regex: 'LG-H81[158]'
       model: 'G4'
     - regex: 'LG-H525n?'
@@ -17003,6 +17008,8 @@ Walton:
       model: 'Primo S6 Infinity'
     - regex: 'Primo H8 Pro(?:[);/ ]|$)'
       model: 'Primo H8 Pro'
+    - regex: 'Primo (RM2|ZX2|NX4) mini(?:[);/ ]|$)'
+      model: 'Primo $1 Mini'
     - regex: 'Primo H8(?:[);/ ]|$)'
       model: 'Primo H8 Turbo'
     - regex: 'RX7 Mini(?:[);/ ]|$)'
@@ -23250,15 +23257,17 @@ Blow:
 
 # FNF
 FNF:
-  regex: 'ifive(?:_mini_3GS|X2|Mini3|3)(?:[);/ ]|$)'
+  regex: 'ifive(?:[_ ]mini[_ ][43]G?S|X2|Mini3|3| Air)(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: 'ifive_mini_3GS'
-      model: 'iFive Mini 3GS'
+    - regex: 'ifive[_ ]mini[_ ]([43]G?S)'
+      model: 'iFive Mini $1'
     - regex: 'ifive(X2|3)'
       model: 'iFive $1'
     - regex: 'ifiveMini3'
       model: 'iFive Mini 3'
+    - regex: 'ifive Air'
+      model: 'iFive Air'
 
 # iMan
 iMan:
