feat(app) detect app YakYak

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -557,3 +557,8 @@
 - regex: 'OK(?:Android|iOS)/([\d\.]+)'
   name: 'Odnoklassniki'
   version: '$1'
+
+# YakYak https://github.com/yakyak/yakyak
+- regex: 'yakyak/(\d+[\.\d]+)'
+  name: 'YakYak'
+  version: '$1'
