--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -581,3 +581,9 @@
     type: mobile app
     name: Netflix
     version: ""
+-
+  user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) yakyak/1.5.0 Chrome/58.0.3029.110 Electron/1.7.10 Safari/537.36
+  client:
+    type: mobile app
+    name: YakYak
+    version: 1.5.0
