feat(app) detect apps: Teams, Raindrop.io, Mailspring, Franz

--- a/Tests/Parser/Client/fixtures/pim.yml
+++ b/Tests/Parser/Client/fixtures/pim.yml
@@ -131,3 +131,21 @@
     type: pim
     name: BathyScaphe
     version: ""
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36 (KHTML, like Gecko) Raindrop.io/5.2.0 Chrome/82.0.4048.0 Electron/9.0.0-beta.3 Safari/537.36
+  client:
+    type: pim
+    name: Raindrop.io
+    version: 5.2.0
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_2) AppleWebKit/537.36 (KHTML, like Gecko) Franz/5.4.1 Chrome/76.0.3809.146 Electron/6.0.10 Safari/537.36
+  client:
+    type: pim
+    name: Franz
+    version: 5.4.1
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Mailspring/1.7.4 Chrome/69.0.3497.128 Electron/4.2.2 Safari/537.36
+  client:
+    type: pim
+    name: Mailspring
+    version: 1.7.4
