--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -562,3 +562,8 @@
 - regex: 'yakyak/(\d+[\.\d]+)'
   name: 'YakYak'
   version: '$1'
+
+# Microsoft Teams (https://www.microsoft.com/en/microsoft-teams/group-chat-software)
+- regex: 'Teams/(\d+[\.\d]+)'
+  name: 'Teams'
+  version: '$1'
