--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -587,3 +587,9 @@
     type: mobile app
     name: YakYak
     version: 1.5.0
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36 (KHTML, like Gecko) Teams/1.3.00.362 Chrome/66.0.3359.181 Electron/3.1.13 Safari/537.36
+  client:
+    type: mobile app
+    name: Teams
+    version: 1.3.00.362
