feat(app) detect apps: Basecamp, Notion

--- a/Tests/Parser/Client/fixtures/pim.yml
+++ b/Tests/Parser/Client/fixtures/pim.yml
@@ -149,3 +149,15 @@
     type: pim
     name: Mailspring
     version: 1.7.4
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Notion/2.0.8 Chrome/76.0.3809.146 Electron/6.1.5 Safari/537.36
+  client:
+    type: pim
+    name: Notion
+    version: 2.0.8
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/537.36 (KHTML, like Gecko) Basecamp3/2.1.0 Chrome/78.0.3904.130 Electron/7.1.5 Safari/537.36
+  client:
+    type: pim
+    name: Basecamp
+    version: 2.1.0
