feat(app) detect apps: Streamlabs OBS, Evernote

--- a/Tests/Parser/Client/fixtures/pim.yml
+++ b/Tests/Parser/Client/fixtures/pim.yml
@@ -161,3 +161,9 @@
     type: pim
     name: Basecamp
     version: 2.1.0
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Evernote/10.8.5 Chrome/87.0.4280.88 Electron/11.1.1 Safari/537.36
+  client:
+    type: pim
+    name: Evernote
+    version: 10.8.5
