--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -567,3 +567,8 @@
 - regex: 'Teams/(\d+[\.\d]+)'
   name: 'Teams'
   version: '$1'
+
+# Streamlabs OBS (https://streamlabs.com/)
+- regex: 'StreamlabsOBS/(\d+[\.\d]+)'
+  name: 'Streamlabs OBS'
+  version: '$1'
