--- a/regexes/client/pim.yml
+++ b/regexes/client/pim.yml
@@ -87,3 +87,8 @@
 - regex: 'Basecamp[0-9]/?(\d+[\.\d]+)'
   name: 'Basecamp'
  version: '$1'
+
+# Evernote (https://evernote.com/)
+- regex: 'Evernote/?(\d+[\.\d]+)'
+  name: 'Evernote'
+ version: '$1'
