--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -593,3 +593,9 @@
     type: mobile app
     name: Teams
     version: 1.3.00.362
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) StreamlabsOBS/0.23.2 Chrome/76.0.3809.146 Electron/6.1.11 Safari/537.36
+  client:
+    type: mobile app
+    name: Streamlabs OBS
+    version: 0.23.2
