--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15847,6 +15847,8 @@ Tecno Mobile:
       model: 'Spark 4 Lite'
     - regex: 'Tecno[ _]KD6(?:[);/ ]|$)'
       model: 'Spark 5 Air'
+    - regex: 'Tecno[ _]KD7h(?:[);/ ]|$)'
+      model: 'Spark 5'
     - regex: 'Tecno[ _]KD7(?:[);/ ]|$)'
       model: 'Spark 5 Pro'
     - regex: 'TECNO[ _]KE7(?:[);/ ]|$)'
@@ -17265,6 +17267,8 @@ Wiko:
       model: 'Power U10'
     - regex: 'W-U300(?:[);/ ]|$)'
       model: 'Ride'
+    - regex: 'U520AS(?:[);/ ]|$)'
+      model: 'Ride 2'
     - regex: 'Wiko ([^/;]+) Build'
       model: '$1'
     - regex: 'Wiko ([^/; ]+)'
