feat(app) detect apps: Rambox Pro, TuneIn Radio, Strimio, Blitz

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -221,6 +221,10 @@
 - regex: 'Snapchat/([\d\.]+)'
   name: 'Snapchat'
   version: '$1'
+# Strimio (https://www.strimio.com/)
+- regex: 'strimio(?:-desktop)/(\d+\.(?:[\.\d]+))?'
+  name: 'Strimio'
+  version: '$1'
 
 # UnityPlayer
 - regex: 'UnityPlayer/([\d\.]+)'
@@ -456,7 +460,7 @@
 - regex: 'TuneIn Radio Pro(?:[^/]+)?/(\d+[\.\d]+)'
   name: 'TuneIn Radio Pro'
   version: '$1'
-- regex: 'TuneIn Radio(?:[^/]+)?/(\d+[\.\d]+)'
+- regex: 'TuneIn(?: Radio[^/]+)?/(\d+[\.\d]+)'
   name: 'TuneIn Radio'
   version: '$1'
 
@@ -556,4 +560,9 @@
 # Odnoklassniki https://play.google.com/store/apps/details?id=ru.ok.android https://apps.apple.com/app/id398465290
 - regex: 'OK(?:Android|iOS)/([\d\.]+)'
   name: 'Odnoklassniki'
+  version: '$1'
+
+# Blitz (https://blitz.gg/)
+- regex: 'Blitz/([\d\.]+)'
+  name: 'Blitz'
   version: '$1'
