--- a/regexes/client/pim.yml
+++ b/regexes/client/pim.yml
@@ -62,3 +62,8 @@
 - regex: 'BathyScaphe/'
   name: 'BathyScaphe'
   version: ''
+
+# Rambox Pro (https://rambox.app/)
+- regex: 'ramboxpro/(\d+\.[\.\d]+)?'
+  name: 'Rambox Pro'
+  version: '$1'
