--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -581,3 +581,21 @@
     type: mobile app
     name: Netflix
     version: ""
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/537.36 (KHTML, like Gecko) TuneIn/1.20.0 Chrome/69.0.3497.128 Electron/4.2.8 Safari/537.36
+  client:
+    type: mobile app
+    name: TuneIn Radio
+    version: 1.20.0
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) strimio-desktop/2.33.10 Chrome/87.0.4280.141 Electron/11.4.3 Safari/537.36
+  client:
+    type: mobile app
+    name: Strimio
+    version: 2.33.10
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.2; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Blitz/1.14.3 Chrome/87.0.4280.141 Electron/11.2.1 Safari/537.36
+  client:
+    type: mobile app
+    name: Blitz
+    version: 1.14.3
