--- a/Tests/Parser/Client/fixtures/pim.yml
+++ b/Tests/Parser/Client/fixtures/pim.yml
@@ -131,3 +131,9 @@
     type: pim
     name: BathyScaphe
     version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) ramboxpro/1.5.2 Chrome/83.0.4103.122 Electron/9.4.4 Safari/537.36
+  client:
+    type: pim
+    name: Rambox Pro
+    version: 1.5.2
