--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3407,3 +3407,11 @@
     version: "5.0"
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.103 Superbird/73.0.3683.103 Safari/537.36
+  client:
+    type: browser
+    name: SuperBird
+    version: 73.0.3683.103
+    engine: Blink
+    engine_version: ""
