--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1701,6 +1701,15 @@
   engine:
     default: 'WebKit'
 
+# SuperBird
+- regex: 'SuperBird(?:/(\d+[\.\d]+))?'
+  name: 'SuperBird'
+  version: '$1'
+  engine:
+    default: 'WebKit'
+    versions:
+      28: 'Blink'
+
 # Chrome Webview
 - regex: 'Version/.* Chrome(?:/(\d+[\.\d]+))?'
   name: 'Chrome Webview'
@@ -2114,11 +2123,6 @@
 #Sunrise
 - regex: 'Sunrise(?:Browser)?(?:/(\d+[\.\d]+))?'
   name: 'Sunrise'
-  version: '$1'
-
-#SuperBird
-- regex: 'SuperBird(?:/(\d+[\.\d]+))?'
-  name: 'SuperBird'
   version: '$1'
 
 #Vision Mobile Browser
