feat(app) detect OfferUp
#6452

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -566,3 +566,8 @@
 - regex: 'Blitz/([\d\.]+)'
   name: 'Blitz'
   version: '$1'
+
+# OfferUp (https://play.google.com/store/apps/details?id=com.offerup)
+- regex: 'OfferUp/([\d\.]+)'
+  name: 'OfferUp'
+  version: '$1'
