--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1118,3 +1118,19 @@
     model: Neo SR620
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: 'OfferUp/3.81.2 (build: 140124316; samsung SM-J260T1 M1AJQ; Android 8.1.0; en_US)'
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: OfferUp
+    version: 3.81.2
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy J2 Core
+  os_family: Android
+  browser_family: Unknown
