feat(app) detect Vuhuv
#6452

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -599,3 +599,9 @@
     type: mobile app
     name: Blitz
     version: 1.14.3
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11;) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.210 Mobile Safari/537.36 Vuhuv/2.1.0519
+  client:
+    type: mobile app
+    name: Vuhuv
+    version: 2.1.0519
