--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -571,3 +571,8 @@
 - regex: 'OfferUp/([\d\.]+)'
   name: 'OfferUp'
   version: '$1'
+
+# Vuhuv (https://play.google.com/store/apps/details?id=com.vuhuv)
+- regex: 'Vuhuv/([\d\.]+)'
+  name: 'Vuhuv'
+  version: '$1'
