fix(device) removed redundant rule HT50

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6728,7 +6728,7 @@ Hoffmann:
 
 # Homtom
 Homtom:
-  regex: 'Homtom|(?:HT[0-9]{1,2}(?: ?Pro)?|HT50)(?:[);/ ]|$)'
+  regex: 'Homtom|(?:HT[0-9]{1,2}(?: ?Pro)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Homtom[_ ])?HT ?([0-9]{1,2}(?: ?Pro)?)(?:[);/ ]|$)'
