feat(os) reducing scan iterations into defining some os ( iOS, Mac, webOS)

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -290,29 +290,22 @@
 ##########
 # webOS
 ##########
-- regex: 'WEBOS(\d+[\.\d]+)'
-  name: 'webOS'
-  version: '$1'
-
-- regex: 'Web0S; Linux/SmartTV.+Chrome/68'
-  name: 'webOS'
-  version: '5'
-- regex: 'Web0S; Linux/SmartTV.+Chrome/53'
-  name: 'webOS'
-  version: '4'
-- regex: 'Web0S; Linux/SmartTV.+Chrome/38'
-  name: 'webOS'
-  version: '3'
-- regex: 'Web0S; Linux/SmartTV.+Safari/538'
-  name: 'webOS'
-  version: '2'
-- regex: 'Web0S; Linux/SmartTV.+Safari/537'
-  name: 'webOS'
-  version: '1'
-
 - regex: '(?:Web0S; .*WEBOS|webOS|web0S|Palm webOS|hpwOS)(?:[/]?(\d+[\.\d]+))?'
   name: 'webOS'
   version: '$1'
+  regexs:
+    - regex: 'WEBOS(\d+[\.\d]+)'
+      version: '$1'
+    - regex: 'Web0S; Linux/SmartTV.+Chrome/68'
+      version: '5'
+    - regex: 'Web0S; Linux/SmartTV.+Chrome/53'
+      version: '4'
+    - regex: 'Web0S; Linux/SmartTV.+Chrome/38'
+      version: '3'
+    - regex: 'Web0S; Linux/SmartTV.+Safari/538'
+      version: '2'
+    - regex: 'Web0S; Linux/SmartTV.+Safari/537'
+      version: '1'
 
 - regex: '(?:PalmOS|Palm OS)(?:[/ ](\d+[\.\d]+))?|Palm'
   name: 'palmOS'
@@ -427,213 +420,113 @@
   name: 'iOS'
   version: '$1'
 
-- regex: 'CFNetwork/.+ Darwin/21.0.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/(\d+[\.\d]+)(?!.*(?:x86_64|i386))'
   name: 'iOS'
-  version: '15.0'
+  version: ''
+  regexs:
+    - regex: 'Darwin/20.6.0'
+      version: '14.7'
+    - regex: 'Darwin/20.5.0'
+      version: '14.6'
+    - regex: 'Darwin/20.4.0'
+      version: '14.5'
+    - regex: 'Darwin/20.3.0'
+      version: '14.4'
+    - regex: 'Darwin/20.2.0'
+      version: '14.3'
+    - regex: 'Darwin/20.1.0'
+      version: '14.2'
+    - regex: 'Darwin/20.0.0'
+      version: '14.0'
+    - regex: 'Darwin/19.6.0'
+      version: '13.6'
+    - regex: 'Darwin/19.5.0'
+      version: '13.5'
+    - regex: 'Darwin/19.4.0'
+      version: '13.4'
+    - regex: 'Darwin/19.3.0'
+      version: '13.3.1'
+    - regex: 'Darwin/19.2.0'
+      version: '13.3'
+    - regex: 'Darwin/19.0.0'
+      version: '13.0'
+    - regex: 'Darwin/18.7.0'
+      version: '12.4'
+    - regex: 'Darwin/18.6.0'
+      version: '12.3'
+    - regex: 'Darwin/18.5.0'
+      version: '12.2'
+    - regex: 'Darwin/18.2.0'
+      version: '12.1'
+    - regex: 'Darwin/18.0.0'
+      version: '12.0'
+    - regex: 'Darwin/17.7.0'
+      version: '11.4.1'
+    - regex: 'Darwin/17.6.0'
+      version: '11.4'
+    - regex: 'CFNetwork/889'
+      version: '11.1'
+    - regex: 'CFNetwork/887'
+      version: '11.0'
+    - regex: 'CFNetwork/811'
+      version: '10.3'
+    - regex: 'CFNetwork/808\.3'
+      version: '10.3'
+    - regex: 'CFNetwork/808\.2'
+      version: '10.2'
+    - regex: 'CFNetwork/808\.1'
+      version: '10.1'
+    - regex: 'CFNetwork/808\.0'
+      version: '10.0'
+    - regex: 'CFNetwork/808'
+      version: '10'
+    - regex: 'CFNetwork/758\.4\.3'
+      version: '9.3.2'
+    - regex: 'CFNetwork/758\.3\.15'
+      version: '9.3'
+    - regex: 'CFNetwork/758\.2\.[78]'
+      version: '9.2'
+    - regex: 'CFNetwork/758\.1\.6'
+      version: '9.1'
+    - regex: 'CFNetwork/758\.0\.2'
+      version: '9.0'
+    - regex: 'CFNetwork/711\.5\.6'
+      version: '8.4.1'
+    - regex: 'CFNetwork/711\.4\.6'
+      version: '8.4'
+    - regex: 'CFNetwork/711\.3\.18'
+      version: '8.3'
+    - regex: 'CFNetwork/711\.2\.23'
+      version: '8.2'
+    - regex: 'CFNetwork/711\.1\.1[26]'
+      version: '8.1'
+    - regex: 'CFNetwork/711\.0\.6'
+      version: '8.0'
+    - regex: 'CFNetwork/672\.1'
+      version: '7.1'
+    - regex: 'CFNetwork/672\.0'
+      version: '7.0'
+    - regex: 'CFNetwork/609\.1'
+      version: '6.1'
+    - regex: 'CFNetwork/60[29]'
+      version: '6.0'
+    - regex: 'CFNetwork/548\.1'
+      version: '5.1'
+    - regex: 'CFNetwork/548\.0'
+      version: '5.0'
+    - regex: 'CFNetwork/485\.13'
+      version: '4.3'
+    - regex: 'CFNetwork/485\.12'
+      version: '4.2'
+    - regex: 'CFNetwork/485\.10'
+      version: '4.1'
+    - regex: 'CFNetwork/485\.2'
+      version: '4.0'
+    - regex: 'CFNetwork/467\.12'
+      version: '3.2'
+    - regex: 'CFNetwork/459'
+      version: '3.1'
 
-- regex: 'CFNetwork/.+ Darwin/20.6.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '14.7'
-
-- regex: 'CFNetwork/.+ Darwin/20.5.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '14.6'
-
-- regex: 'CFNetwork/.+ Darwin/20.4.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '14.5'
-
-- regex: 'CFNetwork/.+ Darwin/20.3.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '14.4'
-
-- regex: 'CFNetwork/.+ Darwin/20.2.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '14.3'
-
-- regex: 'CFNetwork/.+ Darwin/20.1.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '14.2'
-
-- regex: 'CFNetwork/.+ Darwin/20.0.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '14.0'
-
-- regex: 'CFNetwork/.+ Darwin/19.6.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '13.6'
-
-- regex: 'CFNetwork/.+ Darwin/19.5.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '13.5'
-
-- regex: 'CFNetwork/.+ Darwin/19.4.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '13.4'
-
-- regex: 'CFNetwork/.+ Darwin/19.3.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '13.3.1'
-
-- regex: 'CFNetwork/.+ Darwin/19.2.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '13.3'
-
-- regex: 'CFNetwork/.+ Darwin/19.0.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '13.0'
-
-- regex: 'CFNetwork/.+ Darwin/18.7.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '12.4'
-
-- regex: 'CFNetwork/.+ Darwin/18.6.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '12.3'
-
-- regex: 'CFNetwork/.+ Darwin/18.5.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '12.2'
-
-- regex: 'CFNetwork/.+ Darwin/18.2.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '12.1'
-
-- regex: 'CFNetwork/.+ Darwin/18.0.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '12.0'
-
-- regex: 'CFNetwork/.+ Darwin/17.7.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '11.4.1'
-
-- regex: 'CFNetwork/.+ Darwin/17.6.0(?!.*x86_64)'
-  name: 'iOS'
-  version: '11.4'
-
-- regex: 'CFNetwork/889(?!.*x86_64)'
-  name: 'iOS'
-  version: '11.1'
-
-- regex: 'CFNetwork/887(?!.*x86_64)'
-  name: 'iOS'
-  version: '11.0'
-
-- regex: 'CFNetwork/811(?!.*x86_64)'
-  name: 'iOS'
-  version: '10.3'
-
-- regex: 'CFNetwork/808\.3'
-  name: 'iOS'
-  version: '10.3'
-
-- regex: 'CFNetwork/808\.2'
-  name: 'iOS'
-  version: '10.2'
-
-- regex: 'CFNetwork/808\.1'
-  name: 'iOS'
-  version: '10.1'
-
-- regex: 'CFNetwork/808\.0'
-  name: 'iOS'
-  version: '10.0'
-
-- regex: 'CFNetwork/808'
-  name: 'iOS'
-  version: '10'
-
-- regex: 'CFNetwork/758\.4\.3'
-  name: 'iOS'
-  version: '9.3.2'
-
-- regex: 'CFNetwork/758\.3\.15'
-  name: 'iOS'
-  version: '9.3'
-
-- regex: 'CFNetwork/758\.2\.[78]'
-  name: 'iOS'
-  version: '9.2'
-
-- regex: 'CFNetwork/758\.1\.6'
-  name: 'iOS'
-  version: '9.1'
-
-- regex: 'CFNetwork/758\.0\.2'
-  name: 'iOS'
-  version: '9.0'
-
-- regex: 'CFNetwork/711\.5\.6'
-  name: 'iOS'
-  version: '8.4.1'
-
-- regex: 'CFNetwork/711\.4\.6'
-  name: 'iOS'
-  version: '8.4'
-
-- regex: 'CFNetwork/711\.3\.18'
-  name: 'iOS'
-  version: '8.3'
-
-- regex: 'CFNetwork/711\.2\.23'
-  name: 'iOS'
-  version: '8.2'
-
-- regex: 'CFNetwork/711\.1\.1[26]'
-  name: 'iOS'
-  version: '8.1'
-
-- regex: 'CFNetwork/711\.0\.6'
-  name: 'iOS'
-  version: '8.0'
-
-- regex: 'CFNetwork/672\.1'
-  name: 'iOS'
-  version: '7.1'
-
-- regex: 'CFNetwork/672\.0'
-  name: 'iOS'
-  version: '7.0'
-
-- regex: 'CFNetwork/609\.1'
-  name: 'iOS'
-  version: '6.1'
-
-- regex: 'CFNetwork/60[29]'
-  name: 'iOS'
-  version: '6.0'
-
-- regex: 'CFNetwork/548\.1'
-  name: 'iOS'
-  version: '5.1'
-
-- regex: 'CFNetwork/548\.0'
-  name: 'iOS'
-  version: '5.0'
-
-- regex: 'CFNetwork/485\.13'
-  name: 'iOS'
-  version: '4.3'
-
-- regex: 'CFNetwork/485\.12'
-  name: 'iOS'
-  version: '4.2'
-
-- regex: 'CFNetwork/485\.10'
-  name: 'iOS'
-  version: '4.1'
-
-- regex: 'CFNetwork/485\.2'
-  name: 'iOS'
-  version: '4.0'
-
-- regex: 'CFNetwork/467\.12'
-  name: 'iOS'
-  version: '3.2'
-
-- regex: 'CFNetwork/459'
-  name: 'iOS'
-  version: '3.1'
 
 - regex: 'iPhone/(\d+[\.\d]*) hw/'
   name: 'iOS'
@@ -682,237 +575,115 @@
 ##########
 # Mac
 ##########
-- regex: 'CFNetwork/.+ Darwin/20.2.0.*(x86_64)|(x86_64-apple-)?darwin20.2.0'
-  name: 'Mac'
-  version: '11.1'
 
-- regex: 'CFNetwork/.+ Darwin/20.[01].0.*(x86_64)|(x86_64-apple-)?darwin20.[01].0'
+- regex: 'CFNetwork/.+ Darwin/(?:[\d\.]+).+(?:x86_64|i386)|(?:x86_64-apple-)?darwin(?:[\d\.]+)'
   name: 'Mac'
-  version: '11.0'
-
-- regex: 'CFNetwork/.+ Darwin/19.6.0.*(x86_64)|(x86_64-apple-)?darwin19.6.0'
-  name: 'Mac'
-  version: '10.15.6'
-
-- regex: 'CFNetwork/.+ Darwin/19.5.0.*(x86_64)|(x86_64-apple-)?darwin19.5.0'
-  name: 'Mac'
-  version: '10.15.5'
-
-- regex: 'CFNetwork/.+ Darwin/19.4.0.*(x86_64)|(x86_64-apple-)?darwin19.4.0'
-  name: 'Mac'
-  version: '10.15.4'
-
-- regex: 'CFNetwork/.+ Darwin/19.3.0.*(x86_64)|(x86_64-apple-)?darwin19.3.0'
-  name: 'Mac'
-  version: '10.15.3'
-
-- regex: 'CFNetwork/.+ Darwin/19.2.0.*(x86_64)|(x86_64-apple-)?darwin19.2.0'
-  name: 'Mac'
-  version: '10.15.2'
-
-- regex: 'CFNetwork/(?:108[258]|109[18]|1103).*(x86_64)'
-  name: 'Mac'
-  version: '10.15'
-
-- regex: 'CFNetwork/.+ Darwin/18.2.0.*(x86_64)|(x86_64-apple-)?darwin18.2.0'
-  name: 'Mac'
-  version: '10.14.1'
-
-- regex: 'CFNetwork/(?:96[29]|97[14568]).*(x86_64)'
-  name: 'Mac'
-  version: '10.14'
-
-- regex: 'CFNetwork/.+ Darwin/17.7.0.*(x86_64)|(x86_64-apple-)?darwin17.7.0'
-  name: 'Mac'
-  version: '10.13.6'
-
-- regex: 'CFNetwork/.+ Darwin/17.6.0.*(x86_64)|(x86_64-apple-)?darwin17.6.0'
-  name: 'Mac'
-  version: '10.13.5'
-
-- regex: 'CFNetwork/.+ Darwin/17.5.0.*(x86_64)|(x86_64-apple-)?darwin17.5.0'
-  name: 'Mac'
-  version: '10.13.4'
-
-- regex: 'CFNetwork/.+ Darwin/17.4.0.*(x86_64)|(x86_64-apple-)?darwin17.4.0'
-  name: 'Mac'
-  version: '10.13.3'
-
-- regex: 'CFNetwork/.+ Darwin/17.3.0.*(x86_64)|(x86_64-apple-)?darwin17.3.0'
-  name: 'Mac'
-  version: '10.13.2'
-
-- regex: 'CFNetwork/.+ Darwin/17.2.0.*(x86_64)|(x86_64-apple-)?darwin17.2.0'
-  name: 'Mac'
-  version: '10.13.1'
-
-- regex: 'CFNetwork/(?:887|889|893|897|901|902).*(x86_64)'
-  name: 'Mac'
-  version: '10.13'
-
-- regex: 'CFNetwork/.+ Darwin/16.7.0.*(x86_64)|(x86_64-apple-)?darwin16.7.0'
-  name: 'Mac'
-  version: '10.12.6'
-
-- regex: 'CFNetwork/.+ Darwin/16.6.0.*(x86_64)|(x86_64-apple-)?darwin16.6.0'
-  name: 'Mac'
-  version: '10.12.5'
-
-- regex: 'CFNetwork/.+ Darwin/16.5.0.*(x86_64)|(x86_64-apple-)?darwin16.5.0'
-  name: 'Mac'
-  version: '10.12.4'
-
-- regex: 'CFNetwork/.+ Darwin/16.3.0.*(x86_64)|(x86_64-apple-)?darwin16.3.0'
-  name: 'Mac'
-  version: '10.12.3'
-
-- regex: 'CFNetwork/.+ Darwin/16.2.0.*(x86_64)|(x86_64-apple-)?darwin16.2.0'
-  name: 'Mac'
-  version: '10.12.2'
-
-- regex: 'CFNetwork/.+ Darwin/16.1.0.*(x86_64)|(x86_64-apple-)?darwin16.1.0'
-  name: 'Mac'
-  version: '10.12.1'
-
-- regex: 'CFNetwork/811.*(x86_64)'
-  name: 'Mac'
-  version: '10.12'
-
-- regex: 'CFNetwork/807'
-  name: 'Mac'
-  version: '10.12'
-
-- regex: 'CFNetwork/.+ Darwin/15.6.0.*(x86_64)|(x86_64-apple-)?darwin15.6.0'
-  name: 'Mac'
-  version: '10.11.6'
-
-- regex: 'CFNetwork/.+ Darwin/15.5.0.*(x86_64)|(x86_64-apple-)?darwin15.5.0'
-  name: 'Mac'
-  version: '10.11.5'
-
-- regex: 'CFNetwork/.+ Darwin/15.4.0.*(x86_64)|(x86_64-apple-)?darwin15.4.0'
-  name: 'Mac'
-  version: '10.11.4'
-
-- regex: 'CFNetwork/.+ Darwin/15.3.0.*(x86_64)|(x86_64-apple-)?darwin15.3.0'
-  name: 'Mac'
-  version: '10.11.3'
-
-- regex: 'CFNetwork/.+ Darwin/15.2.0.*(x86_64)|(x86_64-apple-)?darwin15.2.0'
-  name: 'Mac'
-  version: '10.11.2'
-
-- regex: 'CFNetwork/760'
-  name: 'Mac'
-  version: '10.11'
-
-- regex: 'CFNetwork/.+ Darwin/14.5.0.*(x86_64)|(x86_64-apple-)?darwin14.5.0'
-  name: 'Mac'
-  version: '10.10.5'
-
-- regex: 'CFNetwork/.+ Darwin/14.4.0.*(x86_64)|(x86_64-apple-)?darwin14.4.0'
-  name: 'Mac'
-  version: '10.10.4'
-
-- regex: 'CFNetwork/.+ Darwin/14.3.0.*(x86_64)|(x86_64-apple-)?darwin14.3.0'
-  name: 'Mac'
-  version: '10.10.3'
-
-- regex: 'CFNetwork/.+ Darwin/14.1.0.*(x86_64)|(x86_64-apple-)?darwin14.1.0'
-  name: 'Mac'
-  version: '10.10.2'
-
-- regex: 'CFNetwork/720'
-  name: 'Mac'
-  version: '10.10'
-
-- regex: 'CFNetwork/.+ Darwin/13.4.0.*(x86_64)|(x86_64-apple-)?darwin13.4.0'
-  name: 'Mac'
-  version: '10.9.5'
-
-- regex: 'CFNetwork/.+ Darwin/13.3.0.*(x86_64)|(x86_64-apple-)?darwin13.3.0'
-  name: 'Mac'
-  version: '10.9.4'
-
-- regex: 'CFNetwork/.+ Darwin/13.2.0.*(x86_64)|(x86_64-apple-)?darwin13.2.0'
-  name: 'Mac'
-  version: '10.9.3'
-
-- regex: 'CFNetwork/.+ Darwin/13.1.0.*(x86_64)|(x86_64-apple-)?darwin13.1.0'
-  name: 'Mac'
-  version: '10.9.2'
-
-- regex: 'CFNetwork/673'
-  name: 'Mac'
-  version: '10.9'
-
-- regex: 'CFNetwork/.+ Darwin/12.5.0.*(x86_64)|(x86_64-apple-)?darwin12.5.0'
-  name: 'Mac'
-  version: '10.8.5'
-
-- regex: 'CFNetwork/.+ Darwin/12.4.0.*(x86_64)|(x86_64-apple-)?darwin12.4.0'
-  name: 'Mac'
-  version: '10.8.4'
-
-- regex: 'CFNetwork/.+ Darwin/12.3.0.*(x86_64)|(x86_64-apple-)?darwin12.3.0'
-  name: 'Mac'
-  version: '10.8.3'
-
-- regex: 'CFNetwork/.+ Darwin/12.2.0.*(x86_64)|(x86_64-apple-)?darwin12.2.0'
-  name: 'Mac'
-  version: '10.8.2'
-
-- regex: 'CFNetwork/.+ Darwin/12.1.0.*(x86_64)|(x86_64-apple-)?darwin12.1.0'
-  name: 'Mac'
-  version: '10.8.1'
-
-- regex: 'CFNetwork/596'
-  name: 'Mac'
-  version: '10.8'
-
-- regex: 'CFNetwork/.+ Darwin/11.5.0.*(x86_64)|(x86_64-apple-)?darwin11.5.0'
-  name: 'Mac'
-  version: '10.7.5'
-
-- regex: 'CFNetwork/.+ Darwin/11.4.0.*(x86_64)|(x86_64-apple-)?darwin11.4.0'
-  name: 'Mac'
-  version: '10.7.4'
-
-- regex: 'CFNetwork/.+ Darwin/11.3.0.*(x86_64)|(x86_64-apple-)?darwin11.3.0'
-  name: 'Mac'
-  version: '10.7.3'
-
-- regex: 'CFNetwork/.+ Darwin/11.2.0.*(x86_64)|(x86_64-apple-)?darwin11.2.0'
-  name: 'Mac'
-  version: '10.7.2'
-
-- regex: 'CFNetwork/.+ Darwin/11.1.0.*(x86_64)|(x86_64-apple-)?darwin11.1.0'
-  name: 'Mac'
-  version: '10.7.1'
-
-- regex: 'CFNetwork/520'
-  name: 'Mac'
-  version: '10.7'
-
-- regex: 'CFNetwork/454'
-  name: 'Mac'
-  version: '10.6'
-
-- regex: 'CFNetwork/(?:438|422|339|330|221|220|217)'
-  name: 'Mac'
-  version: '10.5'
-
-- regex: 'CFNetwork/12[89]'
-  name: 'Mac'
-  version: '10.4'
-
-- regex: 'CFNetwork/1\.2'
-  name: 'Mac'
-  version: '10.3'
-
-- regex: 'CFNetwork/1\.1'
-  name: 'Mac'
-  version: '10.2'
+  version: ''
+  regexs:
+    - regex: 'Darwin/?20.2.0.*'
+      version: '11.1'
+    - regex: 'Darwin/?20.[01].0'
+      version: '11.0'
+    - regex: 'Darwin/?19.6.0'
+      version: '10.15.6'
+    - regex: 'Darwin/?19.5.0'
+      version: '10.15.5'
+    - regex: 'Darwin/?19.4.0'
+      version: '10.15.4'
+    - regex: 'Darwin/?19.3.0'
+      version: '10.15.3'
+    - regex: 'Darwin/?19.2.0'
+      version: '10.15.2'
+    - regex: 'Darwin/?18.2.0'
+      version: '10.14.1'
+    - regex: 'Darwin/?17.7.0'
+      version: '10.13.6'
+    - regex: 'Darwin/?17.6.0'
+      version: '10.13.5'
+    - regex: 'Darwin/?17.5.0'
+      version: '10.13.4'
+    - regex: 'Darwin/?17.4.0'
+      version: '10.13.3'
+    - regex: 'Darwin/?17.3.0'
+      version: '10.13.2'
+    - regex: 'Darwin/?17.2.0'
+      version: '10.13.1'
+    - regex: 'Darwin/?16.7.0'
+      version: '10.12.6'
+    - regex: 'Darwin/?16.6.0'
+      version: '10.12.5'
+    - regex: 'Darwin/?16.5.0'
+      version: '10.12.4'
+    - regex: 'Darwin/?16.3.0'
+      version: '10.12.3'
+    - regex: 'Darwin/?16.2.0'
+      version: '10.12.2'
+    - regex: 'Darwin/?16.1.0'
+      version: '10.12.1'
+    - regex: 'Darwin/?15.6.0'
+      version: '10.11.6'
+    - regex: 'Darwin/?15.5.0'
+      version: '10.11.5'
+    - regex: 'Darwin/?15.4.0'
+      version: '10.11.4'
+    - regex: 'Darwin/?15.3.0'
+      version: '10.11.3'
+    - regex: 'Darwin/?15.2.0'
+      version: '10.11.2'
+    - regex: 'CFNetwork/760'
+      version: '10.11'
+    - regex: 'Darwin/?14.5.0'
+      version: '10.10.5'
+    - regex: 'Darwin/?14.4.0'
+      version: '10.10.4'
+    - regex: 'Darwin/?14.3.0'
+      version: '10.10.3'
+    - regex: 'Darwin/?14.1.0'
+      version: '10.10.2'
+    - regex: 'Darwin/?13.4.0'
+      version: '10.9.5'
+    - regex: 'Darwin/?13.3.0'
+      version: '10.9.4'
+    - regex: 'Darwin/?13.2.0'
+      version: '10.9.3'
+    - regex: 'Darwin/?13.1.0'
+      version: '10.9.2'
+    - regex: 'Darwin/?13.0.0'
+      version: '10.9.0'
+    - regex: 'Darwin/?12.5.0'
+      version: '10.8.5'
+    - regex: 'Darwin/?12.4.0'
+      version: '10.8.4'
+    - regex: 'Darwin/?12.3.0'
+      version: '10.8.3'
+    - regex: 'Darwin/?12.2.0'
+      version: '10.8.2'
+    - regex: 'Darwin/?12.1.0'
+      version: '10.8.1'
+    - regex: 'Darwin/?11.5.0'
+      version: '10.7.5'
+    - regex: 'Darwin/?11.4.2'
+      version: '10.7.5'
+    - regex: 'Darwin/?11.4.0'
+      version: '10.7.4'
+    - regex: 'Darwin/?11.3.0'
+      version: '10.7.3'
+    - regex: 'Darwin/?11.2.0'
+      version: '10.7.2'
+    - regex: 'Darwin/?11.1.0'
+      version: '10.7.1'
+    - regex: 'Darwin/?10.8.0'
+      version: '10.6.8'
+    - regex: 'Darwin/?10.7.3'
+      version: '10.6.7'
+    - regex: 'Darwin/?10.3.0'
+      version: '10.6.3'
+    - regex: 'Darwin/?9.7.1'
+      version: '10.5.7'
+    - regex: 'Darwin/?9.6.2'
+      version: '10.5.6'
+    - regex: 'Darwin/?9.5.[05]'
+      version: '10.5.5'
 
 - regex: 'Mac[ +]OS[ +]?X(?:[ /](?:Version )?(\d+(?:[_\.]\d+)+))?'
   name: 'Mac'
@@ -1094,17 +865,9 @@
   name: 'HP-UX'
   version: '$1'
 
-- regex: 'FreeBSD(?:[/ ]?(\d+[\.\d]+))?'
-  name: 'FreeBSD'
-  version: '$1'
-
-- regex: 'NetBSD(?:[/ ]?(\d+[\.\d]+))?'
-  name: 'NetBSD'
-  version: '$1'
-
-- regex: 'OpenBSD(?:[/ ]?(\d+[\.\d]+))?'
-  name: 'OpenBSD'
-  version: '$1'
+- regex: '(Free|Net|Open)BSD(?:[/ ]?(\d+[\.\d]+))?'
+  name: '$1BSD'
+  version: '$2'
 
 - regex: 'DragonFly(?:[/ ]?(\d+[\.\d]+))?'
   name: 'DragonFly'
