feat(browser) detect OpenFin

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7490,3 +7490,21 @@
     model: OptiPlex 7010
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 OpenFin/6.49.12.65 Safari/537.36
+  os:
+    name: Windows
+    version: "7"
+    platform: x64
+  client:
+    type: browser
+    name: OpenFin
+    version: 6.49.12.65
+    engine: Blink
+    engine_version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Chrome
