--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1701,6 +1701,12 @@
   engine:
     default: 'WebKit'
 
+- regex: 'OpenFin/(?:(\d+[\.\d]+))'
+  name: 'OpenFin'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Chrome Webview
 - regex: 'Version/.* Chrome(?:/(\d+[\.\d]+))?'
   name: 'Chrome Webview'
