--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3407,3 +3407,11 @@
     version: "5.0"
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 OpenFin/6.49.12.65 Safari/537.36
+  client:
+    type: browser
+    name: OpenFin
+    version: 6.49.12.65
+    engine: Blink
+    engine_version: ""
