feat(device) detect new brand AOpen models: eTILE WT22M-FI, eTILE WT19M-FI feat(device) detect brand Huawei model: Nova Plus (MLA-L11)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7203,6 +7203,8 @@ Huawei:
       model: 'Nova'
     - regex: '608HW(?:[);/ ]|$)'
       model: 'Nova Lite'
+    - regex: 'MLA-L11(?:[);/ ]|$)'
+      model: 'Nova Plus'
     - regex: '(?:PIC-(?:[AT]L00|LX9)|HWV31)(?:[);/ ]|$)'
       model: 'Nova 2'
     - regex: '704HW(?:[);/ ]|$)'
@@ -23296,3 +23298,9 @@ Dragon Touch:
   regex: '(Notepad[_ ](?:K10|102))(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
+
+# AOpen
+AOpen:
+  regex: '(WT(?:22|19)M-FI)(?:[);/ ]|$)'
+  device: 'smart display'
+  model: 'eTILE $1'
