--- a/Tests/fixtures/smart_display.yml
+++ b/Tests/fixtures/smart_display.yml
@@ -125,3 +125,40 @@
     model: ViewBoard IFP6550-3 65" 4K
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.4; WT22M-FI Build/KTU84Q)
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smart display
+    brand: AOpen
+    model: eTILE WT22M-FI
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.3.1; WT19M-FI Build/JLS36I)
+  os:
+    name: Android
+    version: 4.3.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smart display
+    brand: AOpen
+    model: eTILE WT19M-FI
+  os_family: Android
+  browser_family: Android Browser
+
