--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -461,7 +461,7 @@
 - regex: 'TuneIn Radio Pro(?:[^/]+)?/(\d+[\.\d]+)'
   name: 'TuneIn Radio Pro'
   version: '$1'
-- regex: 'TuneIn(?: Radio[^/]+)?/(\d+[\.\d]+)'
+- regex: 'TuneIn(?: Radio(?:[^/]+)?)?/(\d+[\.\d]+)'
   name: 'TuneIn Radio'
   version: '$1'
 
