feat(device) detect brand Lenovo model: K3 Note (K50-t5)
feat(tests): Samsung Galaxy A50 (SM-A505GT), Apple iPhone 6s Plus (iPhone8,2),
 Samsung Galaxy A10 (SM-A105M), Asus ZenFone 3 (ZE552KL)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9472,7 +9472,7 @@ Lenovo:
       model: 'ZUK $1'
     - regex: 'K10a40(?:[);/ ]|$)'
       model: 'C2'
-    - regex: 'k50a40(?:[);/ ]|$)'
+    - regex: '(?:k50a40|K50-t5)(?:[);/ ]|$)'
       model: 'K3 Note'
     - regex: 'A7010a48(?:[);/ ]|$)'
       model: 'K4 Note'
