feat(device) detect brand Samsung models: Galaxy Watch 46mm (SM-R800),  Galaxy Watch Active (SM-R500), Galaxy Gear S3 Frontier 46mm (SM-R760),  Galaxy Watch 3 45mm LTE (SM-R845F), Galaxy Watch 3 41mm 4G (SM-R855F),  Galaxy Watch 3 45mm (SM-R840), Galaxy Watch Active 2 40mm (SM-R830),  Galaxy Gear S3 Frontier 33mm (SM-R765V), Galaxy Gear Sport 43mm (SM-R600),  Galaxy Watch 42mm LTE (SM-R815F), Galaxy Watch 42mm (SM-R810),  Galaxy Watch 3 41mm (SM-R850), Galaxy Watch 46mm LTE (SM-R805F),  Galaxy Watch 46mm LTE (SM-R805U), Galaxy Watch 42mm LTE(SM-R815U),  Galaxy Watch Active 2 44mm LTE (SM-R825U), Galaxy Watch Active 2 40mm LTE (SM-R835F),  Galaxy Gear S3 Classic 41mm (SM-R770), Galaxy Watch Active 2 40mm LTE (SM-R835U),  Galaxy Watch 42mm LTE (SM-R815W), Galaxy Watch 3 41mm 4G (SM-R855U),  Galaxy Watch Active 2 44mm LTE (SM-R825F), Galaxy Watch 3 45mm LTE (SM-R845U)
feat(device) detect brand Samsung model: Family Hub (fridge)

feat(test) add tests: Samsung SM-Z9005

issue #5316

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13538,9 +13538,62 @@ Samsung:
       device: 'tablet'
 
     # explicit wearable models
-    - regex: '(?:SAMSUNG )?SM-R820'
+    - regex: 'SM-R820'
       device: 'wearable'
-      model: 'Galaxy Watch Active 2'
+      model: 'Galaxy Watch Active 2 44mm'
+    - regex: 'SM-R825'
+      device: 'wearable'
+      model: 'Galaxy Watch Active 2 44mm LTE'
+    - regex: 'SM-R830'
+      device: 'wearable'
+      model: 'Galaxy Watch Active 2 40mm'
+    - regex: 'SM-R835'
+      device: 'wearable'
+      model: 'Galaxy Watch Active 2 40mm LTE'
+    - regex: 'SM-R800'
+      device: 'wearable'
+      model: 'Galaxy Watch 46mm'
+    - regex: 'SM-R805'
+      device: 'wearable'
+      model: 'Galaxy Watch 46mm LTE'
+    - regex: 'SM-R810'
+      device: 'wearable'
+      model: 'Galaxy Watch 42mm'
+    - regex: 'SM-R815'
+      device: 'wearable'
+      model: 'Galaxy Watch 42mm LTE'
+    - regex: 'SM-R500'
+      device: 'wearable'
+      model: 'Galaxy Watch Active'
+    - regex: 'SM-R600'
+      device: 'wearable'
+      model: 'Galaxy Gear Sport 43mm'
+    - regex: 'SM-R760'
+      device: 'wearable'
+      model: 'Galaxy Gear S3 Frontier 46mm'
+    - regex: 'SM-R765'
+      device: 'wearable'
+      model: 'Galaxy Gear S3 Frontier 33mm'
+    - regex: 'SM-R770'
+      device: 'wearable'
+      model: 'Galaxy Gear S3 Classic 41mm'
+    - regex: 'SM-R845'
+      device: 'wearable'
+      model: 'Galaxy Watch 3 45mm LTE'
+    - regex: 'SM-R840'
+      device: 'wearable'
+      model: 'Galaxy Watch 3 45mm'
+    - regex: 'SM-R850'
+      device: 'wearable'
+      model: 'Galaxy Watch 3 41mm'
+    - regex: 'SM-R855'
+      device: 'wearable'
+      model: 'Galaxy Watch 3 41mm 4G'
+
+    # smart fridge models
+    - regex: 'Family Hub'
+      device: 'peripheral'
+      model: 'Family Hub'
 
     # explicit smartphone models
     - regex: '(?:SAMSUNG-)?SM-G850(?:8S|[AFKLMSWXY])'
