--- a/Tests/fixtures/smartphone-24.yml
+++ b/Tests/fixtures/smartphone-24.yml
@@ -2393,3 +2393,21 @@
     model: Blade A7 (2019)
   os_family: Android
   browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Tizen 2.2; SAMSUNG SM-Z9005) AppleWebKit/537.3 (KHTML, like Gecko) Version/2.2 like Android 4.1; Mobile Safari/537.3
+  os:
+    name: Tizen
+    version: "2.2"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "537.3"
+  device:
+    type: smartphone
+    brand: Samsung
+    model: SM-Z9005
+  os_family: Other Mobile
+  browser_family: Android Browser
