--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3407,3 +3407,11 @@
     version: "5.0"
     engine: Blink
     engine_version: ""
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; SM-G973U Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/86.0.4240.185 Mobile Safari/537.36 EdgW/1.0
+  client:
+    type: browser
+    name: Edge WebView
+    version: "1.0"
+    engine: WebKit
+    engine_version: "537.36"
