--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Edge Webview (https://docs.microsoft.com/en-us/microsoft-edge/webview2/)
+- regex: 'Version/.+Chrome/.+EdgW/(\d+[\.\d]+)'
+  name: 'Edge WebView'
+  version: '$1'
+  engine:
+    default: 'WebKit'
+
 # Mandarin (https://mandarin-browser.com/)
 - regex: 'Mandarin Browser/(\d+[\.\d]+)'
   name: 'Mandarin'
