feat(app) detect app: Google Fiber TV feat(device) detect brand Google models: Fiber GFHD100, Fiber GFHD200 feat(device) detect brand Pioneer model: Fiber BDP-160 feat(device) detect brand Sony model: NSZ-GS7 feat(os) detect Cinnamon defined as GNU/Linux

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -557,3 +557,7 @@
 - regex: 'OK(?:Android|iOS)/([\d\.]+)'
   name: 'Odnoklassniki'
   version: '$1'
+
+- regex: '.+/(?:gfibertv|gftv200)-([\d]+)-'
+  name: 'Google Fiber TV'
+  version: '$1'
