--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -1160,6 +1160,6 @@
 ###########
 # Linux (Generic)
 ###########
-- regex: 'Linux(?:OS)?[^a-z]'
+- regex: 'Linux(?:OS)?[^a-z]|Cinnamon/(?:\d+[\.\d]+)'
   name: 'GNU/Linux'
   version: ''
