--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4325,3 +4325,12 @@
     producer:
       name: Catchpoint Systems
       url: https://www.catchpoint.com/
+-
+  user_agent: Better Uptime Bot Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36
+  bot:
+    name: Better Uptime Bot
+    category: Site Monitor
+    url: https://betteruptime.com/faq
+    producer:
+      name: Better Uptime
+      url: https://betteruptime.com/
